--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ h2 {
 }
 
 .amount {
-    Weight: 700px;
     font-size: 40px;
     font-weight: bold;
     background: #FAFAFA;
@@ -149,6 +148,12 @@ hr {
     padding: 20px;
 }
 
+.donation {
+    border-radius: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .one {
     text-align: center;
     margin-top: 80px;
@@ -163,7 +168,47 @@ hr {
     padding: 10px 50px;
 }
 
-.donation-container .btn-primary{
-    margin:20px auto;
+.donation-container .btn-primary {
+    margin: 20px auto;
     padding: 20px;
+}
+
+/* get my updates */
+.my-updates {
+    text-align: center;
+    padding: 20px 350px;
+}
+
+.update-title {
+    font-size: 50px;
+    font-weight: 700;
+}
+
+.update-description {
+
+    padding: 30px;
+}
+
+.update-form {
+    padding: 100px;
+    background-color: burlywood;
+    border-radius: 5px;
+    gap: 0;
+}
+
+.email {
+    font-size: medium;
+    background: #D9D9D9;
+    border-radius: 5px 0px 0px 5px;
+    padding: 20px 50px;
+    border: none;
+    margin-left: 130px;
+}
+.submit{
+    font-size: medium;
+    background: #FF5959;
+    border-radius: 0px 5px 5px 0px;
+    padding: 20px 50px;
+    border: none;
+    margin: 0;
 }
